--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,12 @@
             <version>1.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>cc.minetale</groupId>
+            <artifactId>Magma</artifactId>
+            <version>1.0</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 </project>
