--- a/build.gradle
+++ b/build.gradle
@@ -26,8 +26,8 @@ dependencies {
 
     compileOnly group: 'cc.minetale', name: 'mLib',             version: 'LATEST'
     compileOnly group: 'cc.minetale', name: 'Flame',            version: 'LATEST'
-    compileOnly group: 'cc.minetale', name: 'BuildingTools',    version: '1.0'
-    compileOnly group: 'cc.minetale', name: 'Magma',            version: '1.0'
+    compileOnly group: 'cc.minetale', name: 'BuildingTools',    version: 'LATEST'
+    compileOnly group: 'cc.minetale', name: 'Magma',            version: 'LATEST'
     compileOnly group: 'cc.minetale', name: 'Quartz',           version: 'LATEST'
 }
 
