--- a/build.gradle
+++ b/build.gradle
@@ -7,18 +7,17 @@ plugins {
 
 repositories {
     mavenLocal()
+    mavenCentral()
     maven {
         url = uri('https://repo.maven.apache.org/maven2/')
+    }
+    maven {
+        url = uri('https://jitpack.io')
     }
 }
 
 group = 'cc.minetale'
 version = 'LATEST'
-
-repositories {
-    mavenLocal()
-    mavenCentral()
-}
 
 dependencies {
     compileOnly         group: 'org.projectlombok', name: 'lombok', version: '1.18.22'
@@ -29,28 +28,34 @@ dependencies {
     compileOnly group: 'cc.minetale', name: 'BuildingTools',    version: 'LATEST'
     compileOnly group: 'cc.minetale', name: 'Magma',            version: 'LATEST'
     compileOnly group: 'cc.minetale', name: 'Quartz',           version: 'LATEST'
+
+    implementation group: 'com.github.Bloepiloepi', name: 'MinestomPvP', version: '5a55c39187'
 }
 
 sourceCompatibility = 17
 targetCompatibility = 17
+
+compileJava {
+    options.compilerArgs << '-parameters'
+}
 
 java {
     withJavadocJar()
     withSourcesJar()
 }
 
-compileJava {
-    options.compilerArgs << '-parameters'
+shadowJar {
+    archiveClassifier.set('')
 }
 
-shadowJar {
-    classifier = null
-}
+shadowJar.finalizedBy javadocJar
+shadowJar.finalizedBy sourcesJar
 
 publishing {
     publications {
         shadow(MavenPublication) { publication ->
             project.shadow.component(publication)
+            artifacts = [ shadowJar, javadocJar, sourcesJar ]
         }
     }
 }
